--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
 	"name": "hedronium/jables",
-	"description": "Store database Schema in Version control the clean way",
+	"description": "Write your Laravel Database Schema in JSON.",
+	"type": "library",
+	"keywords": ["laravel", "database", "schema", "json"],
 	"require": {
 		"seld/jsonlint": "^1.3",
 		"justinrainbow/json-schema": "~1.3"
@@ -15,6 +17,10 @@
 		{
 			"name": "Omran Jamal",
 			"email": "o.jamal97@gmail.com"
+		},
+		{
+			"name": "Aniruddha Chakraborty",
+			"email": "project.anik@gmail.com"
 		}
 	]
 }
