--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"keywords": ["laravel", "database", "schema", "json"],
 	"require": {
 		"seld/jsonlint": "^1.3",
-		"justinrainbow/json-schema": "~1.3"
+		"justinrainbow/json-schema": "~1.3",
+		"symfony/yaml": "~3.1"
 	},
 	"autoload": {
 		"psr-4": {
